examples/invalid/syntaxErr/switch/missingCaseColon.wacc
# switch case label is missing its colon

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int value = 1;
  switch (value)
    case 1 println "one"
    default: println "other"
  end
end
